--- a/TODO_List/src/main/webapp/WEB-INF/web.xml
+++ b/TODO_List/src/main/webapp/WEB-INF/web.xml
@@ -9,4 +9,12 @@
     <welcome-file>default.jsp</welcome-file>
     <welcome-file>default.htm</welcome-file>
   </welcome-file-list>
+  <servlet>
+  	<servlet-name>server</servlet-name>
+  	<servlet-class>Server.server</servlet-class>
+  </servlet>
+  <servlet-mapping>
+  <servlet-name>server</servlet-name>
+  <url-pattern>/server</url-pattern>
+  </servlet-mapping>
 </web-app>
